# singularity

./: README.md  pyproject.toml
handlers/llms/openai/: OpenAIParser.py
handlers/schema/: SchemaBuilder.py
handlers/schema/models/: Property.py  __init__.py
