[tool.poetry]
name = "singularity"
version = "0.1.0"
description = ""
authors = ["Joen Tan <joentze01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdf2image = "^1.17.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
openai = "^1.52.2"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
